[Mac][Material Design] Adjust focus ring position of bookmark bar items.

This cl fixes a regression caused by a recent cl that adjusted bookmark
bar item metrics. Those changes threw off the positioning of the focus
ring highlights.

R=avi@chromium.org
BUG=640106

Review-Url: https://codereview.chromium.org/2299803003
Cr-Commit-Position: refs/heads/master@{#416018}

Former-commit-id: ee1b55d9a6b0dfb066bab62ec24a1357a8794cde